--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,10 @@ description = "Processing and analysis tool for astronomical imaging"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "ipykernel>=6.29.5",
+    "numpy>=2.1.3",
+    "pandas>=2.2.3",
+    "pillow>=11.0.0",
+    "pydantic>=2.9.2",
     "rawkit>=0.6.0",
 ]
