--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "ipykernel>=6.29.5",
     "numpy>=2.1.3",
+    "opencv-python>=4.10.0.84",
     "pandas>=2.2.3",
     "pillow>=11.0.0",
     "pydantic>=2.9.2",
