--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "ipykernel>=6.29.5",
+    "matplotlib>=3.9.3",
     "numpy>=2.1.3",
     "opencv-python>=4.10.0.84",
     "pandas>=2.2.3",
