--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "astrometry>=4.1.2",
+    "astropy>=7.0.0",
     "ipykernel>=6.29.5",
     "matplotlib>=3.9.3",
     "numpy>=2.1.3",
